--- a/LMS/Views/Shared/_Layout.cshtml
+++ b/LMS/Views/Shared/_Layout.cshtml
@@ -48,6 +48,8 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
+                 
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     
                     <partial name="_LoginPartial" />
@@ -55,11 +57,11 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+   @* <div class="container">*@
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
-    </div>
+   @* </div>*@
   
     <footer class="footer">
         Lexicon Learning Menagement System. Copyright © 2022. All rights reserved.
