--- a/LMS/Views/Activities/Create.cshtml
+++ b/LMS/Views/Activities/Create.cshtml
@@ -4,12 +4,13 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<section class="backgroundphoto">
+    <div class="container1 inline-block">
 
-<h4>Activity</h4>
+<h3 style="color: #293a7d;">Create a new activity</h3>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <form asp-controller="Activities" asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="@Model.ModuleId" />
@@ -39,7 +40,8 @@
             </div>
             <div class="form-group">
                 <div class="pt-5">
-                   <input type="submit" value="Create" class="btn btn-primary" />
+                   <input type="submit" value="Create" class="btn btn-primary" />|
+                    <button class="btn btn-outline-primary "> <a asp-controller="Courses" asp-action="IndexTeacher">Back to teacher</a></button>
                 </div>
             </div>
         </form>
@@ -47,9 +49,9 @@
 </div>
 
 
-<div>
-    <a asp-controller="Courses" asp-action="IndexTeacher">Back to teacher</a>
 </div>
+
+  </section>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
