--- a/LMS/Views/Courses/Details.cshtml
+++ b/LMS/Views/Courses/Details.cshtml
@@ -2,15 +2,19 @@
 @{
     ViewData["Title"] = "Details";
 }
-<div class="pt-5">
-  <h3>Course Details</h3>
-</div>
+@*<div class="pt-5">
+  <h3 style="color: #293a7d; text-align:start;">Details for this course</h3>
+</div>*@
 
+<section class="backgroundphotodetails">
+<div class="d-md-flex inline-block align-items-center"> @*Devides screen into 2 parts*@
+<div class=" row-cols-6 align-items-center" style="background-color: hsl(218, 81%,85%); border-radius:2%; width:30%;  display:inline-block;">
 
-<div>
-   <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
+   <h3 class="col-12 p-2 text-center" style="color: #293a7d;">Details for this course</h3>
+
+   <div class="col-8 p-3">
+    <dl class="row-col-8">
+        <dt class = "col-sm-2  ">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd class = "col-sm-10">
@@ -34,12 +38,40 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.EndDate)
         </dd>
-    </dl>
-</div>
-<partial name="_Index_Partial_Details"/>
- 
- 
 
-<div class="pt-5">
-    <a asp-controller="Courses" asp-action="IndexTeacher">Back to teacher</a>
+         <div class="pt-3">
+         <link rel="stylesheet"
+           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+          <button class="btn btn-outline-primary "> 
+             <a asp-controller="Courses" asp-action="IndexTeacher">Back to teacher <i class="fa fa-reply"></i> </a>
+            </button>
+  </div>
 </div>
+    </dl>
+  </div>
+
+
+ <section style="margin-left:8%;
+                 background-color: transparent; 
+                 padding:8%;
+                 border-radius:2%;">
+
+
+ <div class="row-col-8 align-items-center mr-2">
+
+     <div class="row-col-8">
+
+     <partial name="_Index_Partial_Details"/>
+
+     </div>
+
+   </div>
+
+   </section>
+ </div>
+
+ </section>
+
+
+
+
