--- a/LMS/Views/Modules/Edit.cshtml
+++ b/LMS/Views/Modules/Edit.cshtml
@@ -3,13 +3,15 @@
 @{
     ViewData["Title"] = "Edit";
 }
+<section class="backgroundphoto">
+    <div class="container1 inline-block">
 
-<h1>Edit</h1>
+<h1 style="color: #293a7d;">Edit this module </h1>
 
-<h4>Module</h4>
+
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
@@ -34,16 +36,17 @@
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />|
+
+                 <button class="btn btn-outline-primary "><a asp-action="Index">Back to List <i class="fa fa-reply"></i></a></button>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
+</div>
+</section>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
