--- a/LMS/Views/Shared/_LoginPartial.cshtml
+++ b/LMS/Views/Shared/_LoginPartial.cshtml
@@ -6,7 +6,7 @@
 @if (SignInManager.IsSignedIn(User))
 {
    
-        <a  class=" border border-secondary btn border-1 nav-link text-dark mx-4" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage"><em><strong>HELLO</strong></em> @User.Identity?.Name!</a>
+        <a  class=" border border-secondary btn border-1 nav-link text-dark mx-4 float-end" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage"><em><strong>HELLO</strong></em> @User.Identity?.Name!</a>
    
    
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
