--- a/LMS/wwwroot/css/site.css
+++ b/LMS/wwwroot/css/site.css
@@ -7,17 +7,20 @@ html {
     html {
         font-size: 16px;
         background-color: hsl(218, 71%, 95%);
+        font-family: Century Gothic;
     }
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
+    font-family: Century Gothic;
 }
 
 body {
     margin-bottom: 0px;
     background-color: hsl(218, 71%, 95%);
+    font-family: Century Gothic;
 }
 
 .navright {
@@ -50,7 +53,7 @@ body {
     text-align: center;
     text-decoration: overline;
     margin-inline-start: 6%;
-    height: 8px;
+    height: 4px;
     block-size: fit-content;
     padding-block: 4.5%;
     
@@ -63,11 +66,16 @@ body {
     
 }
 
-.teachertable {
+
+/*content that shows information when we click nav bar
+*/
+
+.teachertable {    
     background-color: white;
     background: repeating-linear-gradient(90deg, hsl(218, 71%, 95%), hsl(218, 51%, 75%),hsl(218, 71%, 95%) );
     font-family: Century Gothic;
     border-block: solid;
+    margin:2%;
 }
 
 .btn {
@@ -92,15 +100,25 @@ body {
     border-radius: 3%;
 }
 
+
+/*Edit Couse Background area*/
+
 .backgroundphoto {
-    
-    margin: 0%;
-    padding: 2%;
+   margin-left: 4%;
+    margin-right: 5%;
     border-radius: 2%;
     background-image: url(edit.webp);
-    
 }
-/*.student {
+
+
+    .backgroundphotodetails {
+        background-image: url(studendsida1.jpg);
+        background-size: cover;
+        padding:50px 50px 50px 50px;
+       
+    }
+
+    /*.student {
     background-image: url(studendsida1.jpg);
     background-size: cover;
     border-style:groove;
@@ -111,38 +129,36 @@ body {
 
 
 
-.Activity{
-    background-color:aquamarine;
-    width:10%;
-    height:20%;
-    padding-left:50%;
+    .Activity {
+        background-color: aquamarine;
+        width: 10%;
+        height: 20%;
+        padding-left: 50%;
+    }
 
 
-}
+    .current {
+        margin-left: 3%;
+        /*background-color: hsl(218, 81%, 85%);*/
+        background: repeating-linear-gradient(90deg, hsl(218, 71%, 95%), hsl(218, 51%, 75%),hsl(218, 71%, 95%) );
+        font-family: Century Gothic;
+        border-radius: 11%;
+        align-content: center;
+        width: 20%;
+        border-block-style: groove;
+    }
 
-
-.current {
-    margin-left: 3%;
-    /*background-color: hsl(218, 81%, 85%);*/
-    background: repeating-linear-gradient(90deg, hsl(218, 71%, 95%), hsl(218, 51%, 75%),hsl(218, 71%, 95%) );
-    font-family: Century Gothic;
-    border-radius: 11%;
-    align-content: center;
-    width: 20%;
-    border-block-style: groove;
-}
-
-/*.navigator{
+    /*.navigator{
     align-content:center;
 
 }*/
 
-.undernav {
-    background-color: white;
-    background: repeating-linear-gradient(90deg, hsl(218, 71%, 95%), hsl(218, 51%, 75%),hsl(218, 71%, 95%) );
-    font-family: Century Gothic;
-    border-block-style: groove;
-    width: 300px;
-    border-radius:11%;
-    
-}
+    .undernav {
+        background-color: white;
+        background: repeating-linear-gradient(90deg, hsl(218, 71%, 95%), hsl(218, 51%, 75%),hsl(218, 71%, 95%) );
+        font-family: Century Gothic;
+        border-block-style: groove;
+        width: 300px;
+        border-radius: 11%;
+    }
+
