--- a/LMS/Views/Activities/Index.cshtml
+++ b/LMS/Views/Activities/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<LMS.Core.Entities.Activity>
 
-@{
+@*@{
     ViewData["Title"] = "Index";
 }
 
@@ -20,8 +20,8 @@
 <div class="text-center">
     <a asp-controller="Courses" asp-action="IndexTeacher">Back to Teacher</a> 
 </div>
-
-@*<h1>Index</h1>
+*@
+<h1>Index</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -67,4 +67,4 @@
         </tr>
 }
     </tbody>
-</table>*@
+</table>
