--- a/LMS/Views/Courses/_Index_Partial_Course.cshtml
+++ b/LMS/Views/Courses/_Index_Partial_Course.cshtml
@@ -1,7 +1,58 @@
 ﻿@model IEnumerable<LMS.Core.Entities.Course>
+<div class="row pt-3">
+    <div class="col float-start">
+        <a class="btn btn-primary" asp-controller="Courses" asp-action="Create">New Course</a> 
+       @*<button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#createModule" aria-expanded="false" aria-controls="createModule">
+           New Module
+       </button>*@
+     </div>
+ </div>
+ 
+ 
+ @*<div class="collapse" id="createModule">
+      <div class="card card-body"> 
+          <div class="card" style="width: 18rem;">
+                  <div class="card-body">     
+                      <div class="row">
+                         <div class="col">
+                           <form asp-controller="Courses" asp-action="CreateModule">
+                               <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                               <input type="hidden" asp-for="@model.Course" />
+                                  <div class="form-group">
+                                     <label asp-for="@Model.Course" class="control-label"></label>
+                                     <input asp-for="Name" class="form-control" />
+                                     <span asp-validation-for="@Model.ModuleName" class="text-danger"></span>
+                                  </div>
+                                  <div class="form-group">
+                                  <label asp-for="ModuleDescription" class="control-label"></label>
+                                    <input asp-for="Description" class="form-control" />
+                                    <span asp-validation-for="@Model.ModuleDescription" class="text-danger"></span>
+                                    </div>
+                                 <div class="form-group">
+                                   <label asp-for="ModuleStartDate" class="control-label"></label>
+                                   <input asp-for="StartDate" class="form-control" />
+                                  <span asp-validation-for="@Model.ModuleStartDate" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                 <label asp-for="ModuleEndDate" class="control-label"></label>
+                                  <input asp-for="EndDate" class="form-control" />
+                                 <span asp-validation-for="@Model.ModuleEndDate" class="text-danger"></span>
+                                </div>
+                                <div class="form-group pt-3">
+                                  <input type="submit" value="Save" class="btn btn-primary" />
+                                </div>
+                         </form>
+                        </div>
+                      </div>                   
+                  </div>
+              </div>
+          </div>
+         </div>*@
+    
 
-<div class="text-center pb-5">
-  <h3>Courses</h3>
+
+ <div class="text-center pt-3 pb-3">
+  <h3>All courses</h3>
 </div>
 
 <table class="table">
