--- a/LMS/Views/Activities/Create.cshtml
+++ b/LMS/Views/Activities/Create.cshtml
@@ -4,15 +4,17 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<div class="pt-5">
+    <h1>Create ctivity</h1>
+</div>
 
-<h4>Activity</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+@*<div class="row">
+    <div class="col-md-4">        
         <form asp-controller="Activities" asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="@Model.ModuleId" />
+            <input type="hidden" asp-for="@Model.ForwardCourseId" />
             <div class="form-group">
                 <select asp-for="ActivityTypeId" class="form-control" asp-items="ViewBag.ActivityTypeId"></select>
                 <span asp-validation-for="ActivityTypeId" class="text-danger"></span>
@@ -41,15 +43,70 @@
                 <div class="pt-5">
                    <input type="submit" value="Create" class="btn btn-primary" />
                 </div>
+
+                <div class="row pt-3  float-start">
+                          <input class="form-control" type="file" id="formFile">
+                </div>         
             </div>
-        </form>
+         </form>
     </div>
 </div>
+<div class="pt-5">
+      <a asp-controller="Courses" asp-action="Details" asp-route-id="@Model.ForwardCourseId">Back to Modules and ativities</a>
+</div>*@
 
-
-<div>
-    <a asp-controller="Courses" asp-action="IndexTeacher">Back to teacher</a>
+  <form asp-controller="Activities" asp-action="Create">
+<div class="row pt-3">
+    <div class="col-6">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="@Model.ModuleId" />
+            <input type="hidden" asp-for="@Model.ForwardCourseId" />            
+            <div class="form-group">
+                <select asp-for="ActivityTypeId" class="form-control" asp-items="ViewBag.ActivityTypeId"></select>
+                <span asp-validation-for="ActivityTypeId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Description" class="control-label"></label>
+                <input asp-for="Description" class="form-control" />
+                <span asp-validation-for="Description" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="StartDate" class="control-label"></label>
+                <input asp-for="StartDate" class="form-control" />
+                <span asp-validation-for="StartDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="EndDate" class="control-label"></label>
+                <input asp-for="EndDate" class="form-control" />
+                <span asp-validation-for="EndDate" class="text-danger"></span>
+            </div>
+            <div class="pt-5">
+                   <input type="submit" value="Create" class="btn btn-primary" />
+            </div>
+            <div class="pt-5">
+               <a asp-controller="Courses" asp-action="Details" asp-route-id="@Model.ForwardCourseId">Back to Modules and ativities</a>
+            </div>
+    </div>
+    <div class="col-6">
+        <div class="form-group">
+            <div class="pb-3 text-center">
+              <h4>Document</h4>
+            </div>
+            <div class="row p-3  float-End">
+                   <input class="form-control" type="file" id="formFile">
+            </div> 
+        </div>
+    </div>
 </div>
+</form>
+
+
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
