--- a/LMS/Views/Modules/Edit.cshtml
+++ b/LMS/Views/Modules/Edit.cshtml
@@ -1,48 +1,57 @@
-﻿@model LMS.Core.Entities.Module
+﻿@model LMS.Core.Entities.ViewModels.ModulesViewModel
 
 @{
     ViewData["Title"] = "Edit";
 }
+<div class="pt-5">
+    <h3>Edit Module</h3>
+</div>
 
-<h1>Edit</h1>
-
-<h4>Module</h4>
 <hr />
+<form asp-controller="Modulles" asp-action="Edit">
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
+                <input asp-for="@Model.Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <input asp-for="@Model.Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="StartDate" class="control-label"></label>
-                <input asp-for="StartDate" class="form-control" />
+                <input asp-for="@Model.StartDate" class="form-control" />
                 <span asp-validation-for="StartDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="EndDate" class="control-label"></label>
-                <input asp-for="EndDate" class="form-control" />
+                <input asp-for="@Model.EndDate" class="form-control" />
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group pt-3">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
-        </form>
+            <div class="pt-5">
+                <a asp-controller="Courses" asp-action="Details" asp-route-id="@Model.CourseId">Back to Modules and ativities</a>
+            </div>
+       </div>
+        <div class="col-6">
+        <div class="form-group">
+            <div class="pb-3 text-center">
+              <h4>Document</h4>
+            </div>
+            <div class="row p-3  float-End">
+                   <input class="form-control" type="file" id="formFile">
+            </div> 
+        </div>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+</form>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
