--- a/LMS/Views/Users/Edit.cshtml
+++ b/LMS/Views/Users/Edit.cshtml
@@ -1,8 +1,5 @@
 ﻿@model LMS.Core.Entities.User
 
-@{
-    ViewData["Title"] = "Edit";
-}
 
 <h1>Edit</h1>
 
@@ -27,7 +24,7 @@
                 <select asp-for="CourseId" class="form-control" asp-items="ViewBag.CourseId"></select>
                 <span asp-validation-for="CourseId" class="text-danger"></span>
             </div>
-            <input type="hidden" asp-for="Id" />
+@*            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="UserName" class="control-label"></label>
                 <input asp-for="UserName" class="form-control" />
@@ -37,13 +34,13 @@
                 <label asp-for="NormalizedUserName" class="control-label"></label>
                 <input asp-for="NormalizedUserName" class="form-control" />
                 <span asp-validation-for="NormalizedUserName" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="NormalizedEmail" class="control-label"></label>
                 <input asp-for="NormalizedEmail" class="form-control" />
                 <span asp-validation-for="NormalizedEmail" class="text-danger"></span>
@@ -67,13 +64,13 @@
                 <label asp-for="ConcurrencyStamp" class="control-label"></label>
                 <input asp-for="ConcurrencyStamp" class="form-control" />
                 <span asp-validation-for="ConcurrencyStamp" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="PhoneNumber" class="control-label"></label>
                 <input asp-for="PhoneNumber" class="form-control" />
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
+            @*<div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="PhoneNumberConfirmed" /> @Html.DisplayNameFor(model => model.PhoneNumberConfirmed)
                 </label>
@@ -97,7 +94,8 @@
                 <label asp-for="AccessFailedCount" class="control-label"></label>
                 <input asp-for="AccessFailedCount" class="form-control" />
                 <span asp-validation-for="AccessFailedCount" class="text-danger"></span>
-            </div>
+            </div>*@
+            <br />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
@@ -106,7 +104,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Courses" asp-action="IndexTeacher">Back to List</a>
 </div>
 
 @section Scripts {
