--- a/LMS/Views/Courses/_Index_Partial_Course.cshtml
+++ b/LMS/Views/Courses/_Index_Partial_Course.cshtml
@@ -1,6 +1,13 @@
 ﻿@model IEnumerable<LMS.Core.Entities.Course>
-
-<div class="text-center pt-1 pb-3">
+<div class="row pt-3">
+    <div class="col float-start">
+        <a class="btn btn-primary" asp-controller="Courses" asp-action="Create">New Course</a> 
+     </div>
+ </div>
+ 
+ 
+ 
+ <div class="text-center pt-3 pb-3">
   <h3>All courses</h3>
 </div>
 
