--- a/LMS/Views/Courses/_Index_Partial_Student.cshtml
+++ b/LMS/Views/Courses/_Index_Partial_Student.cshtml
@@ -1,4 +1,10 @@
 ﻿@model IEnumerable<LMS.Core.Entities.User>
+<div class="row pt-3">
+    <div class="col float-start">
+        <a class="btn btn-primary" asp-controller="User" asp-action="Create">New teacher</a> 
+     </div>
+ </div>
+
 <div class="text-center pt-1 pb-3">
   <h3>All students</h3>
 </div>
