--- a/LMS/Views/Modules/Delete.cshtml
+++ b/LMS/Views/Modules/Delete.cshtml
@@ -1,12 +1,11 @@
-﻿@model LMS.Core.Entities.Module
+﻿@model LMS.Core.Entities.ViewModels.ModulesViewModel
 
 @{
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+ <hr />
+ 
 <div>
     <h4>Module</h4>
     <hr />
@@ -37,7 +36,8 @@
         </dd>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-controller="Modules" asp-action="Delete">
+        <input type="hidden" asp-for="ForwardCourseId" />
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
