--- a/LMS/Views/Modules/Edit.cshtml
+++ b/LMS/Views/Modules/Edit.cshtml
@@ -8,11 +8,16 @@
 
 <h4>Module</h4>
 <hr />
+<form asp-controller="Modules" asp-action="Edit">
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="ForwardCourseId" />
+            <div class="pb-3 text-center">
+                  <h4>Module</h4>
+            </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
