--- a/LMS/Areas/Identity/Pages/Account/Login.cshtml
+++ b/LMS/Areas/Identity/Pages/Account/Login.cshtml
@@ -18,10 +18,10 @@
 
         <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(218, 81%, 95%)">
           Create ways <br />
-          <span style="color: hsl(218, 81%, 75%)">for your future!</span>
+          <span style="color: #629f8c">for your future!</span>
         </h1>
 
-        <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%)">
+        <p class="mb-4 opacity-100" style="color: #629f8c; font-size:x-large;">
           Lexicon is a study platform that enables every student and teacher to be comfortable every day in teaching and learning. This platform is easy to use for every user.
         </p>
       </div>
