--- a/LMS/Views/Courses/_Index_Partial_Details.cshtml
+++ b/LMS/Views/Courses/_Index_Partial_Details.cshtml
@@ -4,7 +4,7 @@
 
     <div class="text-center p-3" style="color: #293a7d;">
          
-    <h3 style="background-color: hsl(218, 81%,85%); padding:3%; border-radius:3%; ">Modules With Related Activities </h3>
+    <h3 style="background-color: #a4d6c6; padding:3%; border-radius:5%; ">Modules With Related Activities </h3>
 
     </div>
 
