--- a/LMS/Views/Shared/_Layout.cshtml
+++ b/LMS/Views/Shared/_Layout.cshtml
@@ -38,16 +38,16 @@
 			l-0.479,1.957c-0.28-0.204-1.246-0.871-2.313-1.132C21.457,7.185,21.066,7.159,20.717,7.208z"/></g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g></svg>              
             <a class="navbar-brand" asp-area="" asp-controller="" asp-action=""></a>
 
-                 <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(218, 45%, 30%);">
+                 <h1 class="my-5 display-5 fw-bold ls-tight" style="color:#629f8c;">
                     Lexicon <br />
-                     <span style="color: hsl(218, 81%, 75%)">Learning System</span>
+                     <span style="color:#a4d6c6;">Learning System</span>
                 </h1>
                 
-                
+            @*    
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button>
+                </button>*@
 
                  
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
