--- a/LMS/Views/Courses/Details.cshtml
+++ b/LMS/Views/Courses/Details.cshtml
@@ -8,7 +8,7 @@
 
 <section class="backgroundphotodetails">
 <div class="d-md-flex inline-block align-items-center"> @*Devides screen into 2 parts*@
-<div class=" row-cols-6 align-items-center" style="background-color: hsl(218, 81%,85%); border-radius:2%; width:30%;  display:inline-block;">
+<div class=" row-cols-6 align-items-center" style="background-color:  #a4d6c6; border-radius:2%; width:30%;  display:inline-block;">
 
    <h3 class="col-12 p-2 text-center" style="color: #293a7d;">Details for this course</h3>
 
