--- a/LMS/Views/Courses/IndexTeacher.cshtml
+++ b/LMS/Views/Courses/IndexTeacher.cshtml
@@ -9,7 +9,7 @@
 <div class="text-center pt-0">
     
 
-    <h4 class="my-2 display-6 fw-bold ls-tight" style="color:  hsl(218, 45%, 30%); font-family: Century Gothic; ">
+    <h4 class="my-2 display-6  ls-tight  wellcome" style="color:#a4d6c6; font-family: Century Gothic; ">
          You are logged in as a teacher!
     </h4>
 </div>
