--- a/LMS/Views/Courses/_Index_Partial_Course.cshtml
+++ b/LMS/Views/Courses/_Index_Partial_Course.cshtml
@@ -39,7 +39,7 @@
             </td>
             <td class=" btn display-inline-block">
 
-                 <button  class="btn btn-light px-1 mb-1" ><a asp-action="Details" asp-route-id="@item.Id">Modules and more <i class="fa fa-info"></i></a></button>
+                 <button  class="btn btn-light px-1 mb-1" ><a asp-action="Details" asp-route-id="@item.Id">Modules and details <i class="fa fa-info"></i></a></button>
 
                 <button class="btn btn-light px-1  mb-1 "><a asp-action="Edit" asp-route-id="@item.Id">Edit <i class="fa fa-edit"></i> </a> </button>
                 
