--- a/LMS/wwwroot/css/site.css
+++ b/LMS/wwwroot/css/site.css
@@ -3,13 +3,13 @@ html {
     font-family: Century Gothic;
 }
 
-@media (min-width: 768px) {
+
     html {
         font-size: 16px;
         background-color: hsl(218, 71%, 95%);
         font-family: Century Gothic;
     }
-}
+
 
 html {
     position: relative;
@@ -19,7 +19,7 @@ html {
 
 body {
     margin-bottom: 0px;
-    background-color: hsl(218, 71%, 95%);
+    background-color: #eaf5f1;
     font-family: Century Gothic;
 }
 
@@ -39,7 +39,7 @@ body {
 
 
 .background-radial-gradient {
-    background-color: hsl(218, 41%, 15%);
+    background-color:#a7cab0;
     height:100%;
     background-position: left;
     background-repeat: no-repeat;
@@ -62,6 +62,7 @@ body {
     text-align: center;
     padding: 1em;
     margin-left:36%;
+  
     
     
 }
@@ -70,12 +71,14 @@ body {
 /*content that shows information when we click nav bar
 */
 
-.teachertable {    
+.teachertable {
     background-color: white;
-    background: repeating-linear-gradient(90deg, hsl(218, 71%, 95%), hsl(218, 51%, 75%),hsl(218, 71%, 95%) );
+    background: repeating-linear-gradient(#cff1e6,#a4d6c6,#a4d6c6,#cff1e6);
     font-family: Century Gothic;
-    border-block: solid;
-    margin:2%;
+    border-block: double;
+    border-left-style: double;
+    border-right-style: double;
+    margin: 2%;
 }
 
 .btn {
@@ -89,64 +92,65 @@ body {
 
 .container1 {
 
-    position:center;
-    margin: 4%;
-    padding: 3%;
+    
+    margin: 11%;
+    padding: 4%;
     display:inline-block;
     width: fit-content;
     height: fit-content;
-    margin-left:65%;
-    background-color: #efecd6;
+    margin-top:22%;
+    margin-left:55%;
+    background-color: #c3e6c0;
     border-radius: 3%;
+    
 }
 
 
 /*Edit Couse Background area*/
 
 .backgroundphoto {
-   margin-left: 4%;
+    /* margin-left: 4%;
     margin-right: 5%;
-    border-radius: 2%;
-    background-image: url(edit.webp);
+    border-radius: 2%;*/
+    background-image: url(Desk-Office.jpg);
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+   
+    
 }
 
 
-    .backgroundphotodetails {
-        background-image: url(studendsida1.jpg);
-        background-size: cover;
-        padding:50px 50px 50px 50px;
-       
-    }
+.backgroundphotodetails {
+    background-color: #629f8c;
+    padding: 50px 50px 50px 150px;
+}
 
-    /*.student {
-    background-image: url(studendsida1.jpg);
-    background-size: cover;
-    border-style:groove;
-    border-width:medium;
-
-    
-}*/
+   
 
 
 
-    .Activity {
+   /* .Activity {
         background-color: aquamarine;
         width: 10%;
         height: 20%;
         padding-left: 50%;
     }
+*/
 
-
-    .current {
-        margin-left: 3%;
-        /*background-color: hsl(218, 81%, 85%);*/
-        background: repeating-linear-gradient(90deg, hsl(218, 71%, 95%), hsl(218, 51%, 75%),hsl(218, 71%, 95%) );
-        font-family: Century Gothic;
-        border-radius: 11%;
-        align-content: center;
-        width: 20%;
-        border-block-style: groove;
-    }
+.current {
+    margin: 3%;
+    padding: 5%;
+    font-size: 25px;
+    margin-left: 15%;
+    margin-right: 15%;
+    background: repeating-linear-gradient(#cff1e6,#a4d6c6,#a4d6c6,#cff1e6 );
+    font-family: Century Gothic;
+    border-radius: 3%;
+    align-content: center;
+    width: 100%;
+    border-block-style: groove;
+}
 
     /*.navigator{
     align-content:center;
@@ -162,3 +166,26 @@ body {
         border-radius: 11%;
     }
 
+
+.student {
+  
+    margin-block:2%;
+    border-radius:3%;
+    width:fit-content;
+}
+
+.studentsida {
+    background-image: url();
+}
+
+/*    wellcome datalist the beginning color-profile the page*/
+
+.wellcome {
+    background-color: #629f8c;
+    padding:2%;
+    margin-inline-start:5%;
+    margin-inline-end:6%;
+    text-align:center;
+    border-block:groove;
+    
+}
