--- a/LMS/Views/Users/Details.cshtml
+++ b/LMS/Views/Users/Details.cshtml
@@ -116,5 +116,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Courses" asp-action="IndexTeacher">Back to List</a>
 </div>
